--- a/k8s-dev.yaml
+++ b/k8s-dev.yaml
@@ -14,7 +14,7 @@ spec:
         app: jenkins-demo
     spec:
       containers:
-      - image: 	huangxiang0425/jenkins-demo:<BUILD_TAG>
+      - image: 	192.168.100.104/test/jenkins-demo:<BUILD_TAG>
         imagePullPolicy: IfNotPresent
         name: jenkins-demo
         env:
