--- a/k8s-prod.yaml
+++ b/k8s-prod.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jenkins-demo
-  namespace: production
+  namespace: pro
 spec:
   replicas: 1
   selector:
